tests/integration/fail/regex_wrong_types.kr
# Test regex with wrong argument types
# Expected: Error about wrong argument types

set result to call regex.match with 123, "pattern"
print result

